--- a/example.env
+++ b/example.env
@@ -1,4 +1,3 @@
-NEO4J_URI=<LA TUA URI>
-NEO4J_USER=<LA TUA USER>
-NEO4J_PASSWORD=<LA TUA PASSWORD>
-
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=password
